Use Set.of in CardSet